--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=SUITE:wght@500&family=Roboto:ital,wght@1,900&family=Noto+Sans+KR:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=SUITE:wght@500&family=Roboto:ital,wght@1,900&family=Noto+Sans+KR:wght@500&display=swap");
 
 $font-weight-normal: 400;
 $font-weight-bold: 700;
@@ -139,7 +139,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 
@@ -150,13 +150,12 @@ table {
 
 * {
   box-sizing: border-box;
-}
-
-body {
   font-weight: $font-weight-normal;
   color: black;
   line-height: 1.2;
-  font-family: 'SUITE', sans-serif, 'Roboto', sans-serif;
+  font-family: "SUITE", sans-serif, "Roboto", sans-serif;
+  border: none;
+  outline: none;
 }
 
 .normal {
